--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <body>
 
     <div class="container">
-        <div class="box-pc">
-            <div class="box-vida"></div>
+        <div class="box-user">
+            <div class="box-vida">
+                <h3>User Name</h3><h3>:</h3><h3>5</h3>
+            </div>
             <div class="box-card">
                 <div class="card">
                     <div class="card-image"><img src="img/sany.jpg"></div>
@@ -42,26 +44,90 @@
                             <div class="level">37</div>
                         </div>
                     </div>
-                    <div class="card-special"></div>
-                    <div class="card-activator"></div>
+                    <div class="card-special">
+                        <div class="special-title">
+                            <h3>Special:</h3>
+                            <h4>Brain Melted</h4> 
+                        </div>
+                        <div class="special-description">
+                            <p>Retira 15 pontos de cada skill do oponente</p>
+                        </div>
+                    </div>
+                    <div class="card-activator">
+                        <h3>Ativador</h3>
+                        <ul>
+                            <li>Fred</li>
+                            <li>Lucas</li>
+                            <li>Wilkor</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="box-user">
-            <div class="box-vida"></div>
+        <div class="box-pc">
+            <div class="box-vida">
+                <h3>PC</h3><h3>:</h3><h3>5</h3>
+            </div>
             <div class="box-card">
                 <div class="card">
-                    
+                    <div class="card-image"><img src="img/sany.jpg"></div>
+                    <div class="card-name"><h1>Sany</h1></div>
+                    <div class="card-skill">
+                        <div class="js">
+                            <div class="label">JS</div>
+                            <div class="bar">
+                                <div class="bar-level-js"></div>
+                            </div>
+                            <div class="level">85</div>
+                        </div>
+                        <div class="html">
+                            <div class="label">HTML</div>
+                            <div class="bar">
+                                <div class="bar-level-html"></div>
+                            </div>
+                            <div class="level">85</div>
+                        </div>
+                        <div class="css">
+                            <div class="label">CSS</div>
+                            <div class="bar">
+                                <div class="bar-level-css"></div>
+                            </div>
+                            <div class="level">37</div>
+                        </div>
+                    </div>
+                    <div class="card-special">
+                        <div class="special-title">
+                            <h3>Special:</h3>
+                            <h4>Brain Melted</h4> 
+                        </div>
+                        <div class="special-description">
+                            <p>Retira 15 pontos de cada skill do oponente</p>
+                        </div>
+                    </div>
+                    <div class="card-activator">
+                        <h3>Ativador</h3>
+                        <ul>
+                            <li>Fred</li>
+                            <li>Lucas</li>
+                            <li>Wilkor</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
 
         <div class="box-side">
             <div class="box-console"></div>
-            <div class="box-deck"></div>
+            <div class="box-deck">
+                <div class="deck-comecar"><h2>COMEÇAR</h2></div>
+            </div>
         </div>
     </div>
+
+<script src="cards.js"></script>
+<script src="players.js"></script>
+<script src="main.js"></script>
 
 </body>
 
