Como repetir o jogo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="box-user">
             <div class="box-vida">
-                <h3 id="player-name">User Name</h3><h3>:</h3><h3>5</h3>
+                <h3 id="player-name">User Name</h3><h3>:</h3><h3 id="user-life">5</h3>
             </div>
             <div class="box-card">
                 <div class="card">
@@ -27,38 +27,35 @@
                             <div class="bar">
                                 <div class="bar-level-js" id="bar-user-js"></div>
                             </div>
-                            <div class="level" id="user-js-level">85</div>
+                            <div class="level" id="user-js-level"></div>
                         </div>
                         <div class="html" id="user-html-btn">
                             <div class="label">HTML</div>
                             <div class="bar">
                                 <div class="bar-level-html" id="bar-user-html"></div>
                             </div>
-                            <div class="level" id="user-html-level">85</div>
+                            <div class="level" id="user-html-level"></div>
                         </div>
                         <div class="css" id="user-css-btn">
                             <div class="label">CSS</div>
                             <div class="bar">
                                 <div class="bar-level-css" id="bar-user-css"></div>
                             </div>
-                            <div class="level" id="user-css-level">37</div>
+                            <div class="level" id="user-css-level"></div>
                         </div>
                     </div>
                     <div class="card-special">
                         <div class="special-title">
                             <h3>Special:</h3>
-                            <h4 id="user-special">Brain Melted</h4> 
+                            <h4 id="user-special"></h4> 
                         </div>
                         <div class="special-description" id="user-special-description">
-                            <p>Retira 15 pontos de cada skill do oponente</p>
+                            <p></p>
                         </div>
                     </div>
                     <div class="card-activator">
                         <h3>Ativador</h3>
                         <ul id="user-activator">
-                            <li>Fred</li>
-                            <li>Lucas</li>
-                            <li>Wilkor</li>
                         </ul>
                     </div>
                 </div>
@@ -67,7 +64,7 @@
 
         <div class="box-pc">
             <div class="box-vida">
-                <h3>PC</h3><h3>:</h3><h3>5</h3>
+                <h3>PC</h3><h3>:</h3><h3 id="pc-life">5</h3>
             </div>
             <div class="box-card">
                 <div class="card-pc">
