--- a/index.html
+++ b/index.html
@@ -11,52 +11,61 @@
 </head>
 
 <body>
-<div class="home">Bem vindo ao meu jogo! <button id="start-game">ENTRAR</button></div>
+    <div class="modal">
+        <h1 id="msg-final">Você perdeu :(</h1>
+        <div class="btn-jogar-novamente" id="restart-game">JOGAR NOVAMENTE</div>
+    </div>
     <div class="container">
         <div class="box-user">
             <div class="box-vida">
-                <h3 id="player-name">User Name</h3><h3>:</h3><h3 id="user-life">5</h3>
+                <h3 id="player-name">User Name</h3>
+                <h3>:</h3>
+                <h3 id="user-life">5</h3>
             </div>
             <div class="box-card">
                 <div class="card">
-                    <div class="card-image" id="user-card-img"></div>
-                    <div class="card-name"><h1 id="user-card-name"></h1></div>
-                    <div class="card-skill">
-                        <div class="js" id="user-js-btn">
-                            <div class="label">JS</div>
-                            <div class="bar">
-                                <div class="bar-level-js" id="bar-user-js"></div>
+                    <div class="esconder">
+                        <div class="card-image" id="user-card-img"></div>
+                        <div class="card-name">
+                            <h1 id="user-card-name"></h1>
+                        </div>
+                        <div class="card-skill">
+                            <div class="js" id="user-js-btn">
+                                <div class="label">JS</div>
+                                <div class="bar">
+                                    <div class="bar-level-js" id="bar-user-js"></div>
+                                </div>
+                                <div class="level" id="user-js-level"></div>
                             </div>
-                            <div class="level" id="user-js-level"></div>
-                        </div>
-                        <div class="html" id="user-html-btn">
-                            <div class="label">HTML</div>
-                            <div class="bar">
-                                <div class="bar-level-html" id="bar-user-html"></div>
+                            <div class="html" id="user-html-btn">
+                                <div class="label">HTML</div>
+                                <div class="bar">
+                                    <div class="bar-level-html" id="bar-user-html"></div>
+                                </div>
+                                <div class="level" id="user-html-level"></div>
                             </div>
-                            <div class="level" id="user-html-level"></div>
-                        </div>
-                        <div class="css" id="user-css-btn">
-                            <div class="label">CSS</div>
-                            <div class="bar">
-                                <div class="bar-level-css" id="bar-user-css"></div>
+                            <div class="css" id="user-css-btn">
+                                <div class="label">CSS</div>
+                                <div class="bar">
+                                    <div class="bar-level-css" id="bar-user-css"></div>
+                                </div>
+                                <div class="level" id="user-css-level"></div>
                             </div>
-                            <div class="level" id="user-css-level"></div>
                         </div>
-                    </div>
-                    <div class="card-special">
-                        <div class="special-title">
-                            <h3>Special:</h3>
-                            <h4 id="user-special"></h4> 
+                        <div class="card-special">
+                            <div class="special-title">
+                                <h3>Special:</h3>
+                                <h4 id="user-special"></h4>
+                            </div>
+                            <div class="special-description" id="user-special-description">
+                                <p></p>
+                            </div>
                         </div>
-                        <div class="special-description" id="user-special-description">
-                            <p></p>
+                        <div class="card-activator">
+                            <h3>Ativador</h3>
+                            <ul id="user-activator">
+                            </ul>
                         </div>
-                    </div>
-                    <div class="card-activator">
-                        <h3>Ativador</h3>
-                        <ul id="user-activator">
-                        </ul>
                     </div>
                 </div>
             </div>
@@ -64,12 +73,16 @@
 
         <div class="box-pc">
             <div class="box-vida">
-                <h3>PC</h3><h3>:</h3><h3 id="pc-life">5</h3>
+                <h3>PC</h3>
+                <h3>:</h3>
+                <h3 id="pc-life">5</h3>
             </div>
             <div class="box-card">
                 <div class="card-pc">
                     <div class="card-image" id="pc-card-img"></div>
-                    <div class="card-name"><h1 id="pc-card-name"></h1></div>
+                    <div class="card-name">
+                        <h1 id="pc-card-name"></h1>
+                    </div>
                     <div class="card-skill">
                         <div class="js" id="pc-js-btn">
                             <div class="label">JS</div>
@@ -96,7 +109,7 @@
                     <div class="card-special">
                         <div class="special-title">
                             <h3>Special:</h3>
-                            <h4 id="pc-special"></h4> 
+                            <h4 id="pc-special"></h4>
                         </div>
                         <div class="special-description" id="pc-special-description">
                             <p></p>
@@ -105,7 +118,7 @@
                     <div class="card-activator">
                         <h3>Ativador</h3>
                         <ul id="pc-activator">
-                            
+
                         </ul>
                     </div>
                 </div>
@@ -113,17 +126,24 @@
         </div>
 
         <div class="box-side">
-            <div class="box-console"></div>
+            <div class="rodada"></div>
+            <div class="box-console">
+                <p id="msg-console"></p>
+                <div class="btn-proxima-partida" id="proxima-partida">PROXIMA PARTIDA</div>
+            </div>
             <div class="box-deck">
-                <div class="deck-comecar"><h2>COMEÇAR</h2></div>
+                <div class="deck-comecar" id="sortear">
+                    <h2>SORTEAR</h2>
+                </div>
             </div>
         </div>
     </div>
 
-<script src="cards.js"></script>
-<script src="players.js"></script>
-<script src="functions.js"></script>
-<script src="main.js"></script>
+    <script src="cards.js"></script>
+    <script src="players.js"></script>
+    <script src="components.js"></script>
+    <script src="functions.js"></script>
+    <script src="main.js"></script>
 
 </body>
 
