falta melhorar o design

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <h1 id="msg-final">Você perdeu :(</h1>
         <div class="btn-jogar-novamente" id="restart-game">JOGAR NOVAMENTE</div>
     </div>
+    <div class="modal-special">
+        <h1 class="msg-special">Fred derreteu seu cérebro</h1>
+        <div class="btn-ok">OK</div>
+    </div>
     <div class="container">
         <div class="box-user">
             <div class="box-vida">
@@ -139,11 +143,12 @@
         </div>
     </div>
 
-    <script src="cards.js"></script>
-    <script src="players.js"></script>
-    <script src="components.js"></script>
-    <script src="functions.js"></script>
-    <script src="main.js"></script>
+    <script src="js/cards.js"></script>
+    <script src="js/players.js"></script>
+    <script src="js/components.js"></script>
+    <script src="js/special-functions.js"></script>
+    <script src="js/functions.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 
