--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="modal">
-        <h1 id="msg-final">Você perdeu :(</h1>
+        <h1 id="msg-final"></h1>
         <div class="btn-jogar-novamente" id="restart-game">JOGAR NOVAMENTE</div>
     </div>
     <div class="modal-special">
@@ -134,11 +134,6 @@
             <div class="box-console">
                 <p id="msg-console"></p>
                 <div class="btn-proxima-partida" id="proxima-partida">PROXIMA PARTIDA</div>
-            </div>
-            <div class="box-deck">
-                <div class="deck-comecar" id="sortear">
-                    <h2>SORTEAR</h2>
-                </div>
             </div>
         </div>
     </div>
