--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+    <div class="modal-home">
+        <h1 class="msg-home">Insira seu nome:</h1>
+        <input class="input-name">
+        <div class="btn-jogar-novamente" id="jogar">JOGAR</div>
+    </div>
     <div class="modal">
         <h1 id="msg-final"></h1>
         <div class="btn-jogar-novamente" id="restart-game">JOGAR NOVAMENTE</div>
@@ -24,10 +29,11 @@
             <div class="box-vida">
                 <h3 id="player-name">User Name</h3>
                 <h3>:</h3>
-                <h3 id="user-life">5</h3>
+                <h3 id="user-life"></h3>
             </div>
             <div class="box-card">
                 <div class="card">
+                    <div class="back-img"><img src="img/logo-ironhack.png"></div>
                     <div class="esconder">
                         <div class="card-image" id="user-card-img"></div>
                         <div class="card-name">
@@ -79,7 +85,7 @@
             <div class="box-vida">
                 <h3>PC</h3>
                 <h3>:</h3>
-                <h3 id="pc-life">5</h3>
+                <h3 id="pc-life"></h3>
             </div>
             <div class="box-card">
                 <div class="card-pc">
